--- a/src/app/social-media/components/post-list-item/post-list-item.component.html
+++ b/src/app/social-media/components/post-list-item/post-list-item.component.html
@@ -1,7 +1,7 @@
-<mat-card> 
+<mat-card highlight="white"> 
     <mat-card-header>
         <mat-card-title>
-            <span highlight="Lightblue">{{ post.title | titlecase }}</span>
+            <span>{{ post.title | titlecase }}</span>
         </mat-card-title>
         <mat-card-subtitle>
             <span>{{ tempUser | username }}</span>
