Mise en place animation sur les commentaires.

--- a/src/app/social-media/components/post-list-item/post-list-item.component.html
+++ b/src/app/social-media/components/post-list-item/post-list-item.component.html
@@ -1,4 +1,4 @@
-<mat-card highlight="white"> 
+<mat-card> 
     <mat-card-header>
         <mat-card-title>
             <span>{{ post.title | titlecase }}</span>
