--- a/src/app/shared/components/comments/comments.component.html
+++ b/src/app/shared/components/comments/comments.component.html
@@ -12,7 +12,7 @@
                   [@listItem]="animationStates[i]"
                   (mouseenter)="onListItemMouseEnter(i)"
                   (mouseleave)="onListItemMouseLeave(i)">
-    <span mat-line> {{ comment.comment }} </span> <br>
-    <span mat-line> {{ comment.createdDate | timeAgo}} </span>
+    <span class="comment-text" mat-line> {{ comment.comment }} </span> <br>
+    <span class="comment-date" mat-line> {{ comment.createdDate | timeAgo}} </span>
   </mat-list-item>
 </mat-list>
